[gd_scene load_steps=9 format=3 uid="uid://c4xbf8txokgvr"]

[ext_resource type="Script" uid="uid://cfbhfg7f0v546" path="res://scripts/nodes/ui/game_over.gd" id="1_wqhvx"]
[ext_resource type="FontFile" uid="uid://msqy0hwvsuth" path="res://assets/fonts/PixelOperator8.ttf" id="1_xeevv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wqhvx"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 0.356863)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu4wh"]
bg_color = Color(0.339911, 0.693591, 0.336959, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_racf3"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_top = 16.0
expand_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7m3ot"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_top = 16.0
expand_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbwuq"]
bg_color = Color(0.339911, 0.693591, 0.336959, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_top = 16.0
expand_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6o8e"]
bg_color = Color(0.6, 0.439216, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_top = 16.0
expand_margin_bottom = 16.0

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqhvx")

[node name="Panel" type="Panel" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wqhvx")

[node name="Control" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -568.0
offset_top = -244.0
offset_right = 543.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -472.5
offset_top = -262.0
offset_right = 472.5
offset_bottom = 305.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fu4wh")

[node name="GameOutcomeLabel" type="Label" parent="Panel/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.268
anchor_right = 0.5
anchor_bottom = 0.268
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_xeevv")
theme_override_font_sizes/font_size = 48
text = "Game Over!"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.5
offset_top = -86.0
offset_right = 175.5
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="CoinsLabel" type="Label" parent="Panel/Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_xeevv")
theme_override_font_sizes/font_size = 24
text = "Coins collected: 0"

[node name="FruitsLabel" type="Label" parent="Panel/Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_xeevv")
theme_override_font_sizes/font_size = 24
text = "Fruits collected: 0"

[node name="SlimesLabel" type="Label" parent="Panel/Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_xeevv")
theme_override_font_sizes/font_size = 24
text = "Slimes killed: 0"

[node name="ButtonsContainer" type="VBoxContainer" parent="Panel/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.873
anchor_right = 0.5
anchor_bottom = 0.873
offset_left = -174.5
offset_top = -78.352
offset_right = 175.5
offset_bottom = 45.648
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 60

[node name="StartOverButton" type="Button" parent="Panel/Control/Panel/ButtonsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xeevv")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_racf3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7m3ot")
theme_override_styles/normal = SubResource("StyleBoxFlat_tbwuq")
text = "Start Over"

[node name="MainMenuButton" type="Button" parent="Panel/Control/Panel/ButtonsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xeevv")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_x6o8e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_x6o8e")
theme_override_styles/normal = SubResource("StyleBoxFlat_x6o8e")
text = "Main Menu"

[connection signal="pressed" from="Panel/Control/Panel/ButtonsContainer/StartOverButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Control/Panel/ButtonsContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
